@@ -13,10 +13,10 @@ def append_more_for_video(context_menu, provider, context, video_id, is_logged_i
         _refresh_container = '1'
 
     context_menu.append((context.localize(provider.LOCAL_MAP['youtube.video.more']),
-                         'Container.Update(%s)' % context.create_uri(['video', 'more'],
-                                                                     {'video_id': video_id,
-                                                                      'logged_in': _is_logged_in,
-                                                                      'refresh_container': _refresh_container})))
+                         'RunPlugin(%s)' % context.create_uri(['video', 'more'],
+                                                              {'video_id': video_id,
+                                                               'logged_in': _is_logged_in,
+                                                               'refresh_container': _refresh_container})))
 
 
 def append_content_from_description(context_menu, provider, context, video_id):
